<resources>
    <string name="app_name">KnjizaraTest</string>
    <string name="nesto">Nesto</string>
    <string name="katNajp">Najpopularnije</string>
    <string name="katBesp">Besplatne</string>
    <string name="katHro">HRONOLOSKA LISTA</string>
    <string name="naslov">Naslov</string>
    <string name="autor">Autor</string>
    <string name="isbn">ISBN</string>
    <string name="kategorija">Kategorija</string>
    <string name="cena">Cena knjige:</string>
    <string name="korpaAdd">Dodaj u korpu</string>
    <string name="izdavac">IZDAVAC:</string>
    <string name="knjiga">Knjiga - </string>
    <string name="knjizara">KNJIZARA</string>
    <string name="moje_knjige">MOJE KNJIGE</string>
    <string name="nista" />
    <string name="kupovina">Zavrsi kupovinu</string>
    <string name="stanjeKorpa">Korpa(): </string>
    <string name="cenaKorpa">0 rsd.</string>
    <string name="obrisi">Obrisi</string>
    <string name="nacinPlacanja">Izaberite nacin placanja:</string>
    <string name="nacinPlacanja1">Platnom karticom</string>
    <string name="nacinPlacanja2">Vaucerom</string>
    <string name="dalje">DALJE</string>
    <string name="nazad">NAZAD</string>
    <string name="emailHint">Email</string>
    <string name="usernameHint2">username</string>
    <string name="passwordHint">Password</string>
    <string name="login">PRIJAVI SE</string>
    <string name="register">REGISTRUJ SE</string>
    <string name="besp">Besplatne knjige</string>
    <string name="kup">Kupljene knjige</string>
    <string name="ukupno2">Ukupno novca potroseno</string>
    <string name="ukupnoKnjige2">1000 RSD</string>
    <string name="pregledP">Pregled placanja</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brTest">0</string>
    <string name="komentar">Unesite svoj komentar o knjizi ...</string>
    <string name="komentarBtn">OSTAVI KOMENTAR</string>
</resources>
